@@ -3,8 +3,10 @@ Revision history for Perl extension AnyEvent.
 	- document the first parameter passed to condvar callbacks to be
           the callback.
         - add AnyEvent::Socket::{ntoa,aton} aliases.
-        - optimize the AE::Handle->push_read (line ..) for the default
+        - optimize the AE::Handle->push_read (line) for the default
           eol marker.
+        - optimize push_read (packstring|storable) for small packets.
+        - fix a bug in push_read (storable) of unknown impact.
 
 4.22 Sun Jul 20 16:34:13 CEST 2008
 	- new function AnyEvent::Socket::parse_hostport.
